trigger a PR build

--- a/README.md.erb
+++ b/README.md.erb
@@ -159,3 +159,5 @@ Recurrence: https://github.com/seejohnrun/ice_cube
 ## License
 
 See files `LICENSE` and `NOTICE` in this repository.
+
+This commit added to trigger a PR pipeline build.
