add concourse badge to README and rename concourse jobs

--- a/README.md.erb
+++ b/README.md.erb
@@ -14,6 +14,7 @@ A command-line tool to help me manage my Google Calendar.
 - set up all-day events to let people know your location in the world
 - easily join the videoconference for your current meeting
 
+[![Concourse CI](https://ci.nokogiri.org/api/v1/teams/calendar-assistants/pipelines/calendar-assistant/jobs/rake-spec/badge)](https://ci.nokogiri.org/teams/calendar-assistants/pipelines/calendar-assistant)
 
 ## Usage
 
