--- a/README.md.erb
+++ b/README.md.erb
@@ -15,6 +15,7 @@ A command-line tool to help me manage my Google Calendar.
 - easily join the videoconference for your current meeting
 
 [![Concourse CI](https://ci.nokogiri.org/api/v1/teams/calendar-assistants/pipelines/calendar-assistant/jobs/rake-spec/badge)](https://ci.nokogiri.org/teams/calendar-assistants/pipelines/calendar-assistant)
+[![Maintainability](https://api.codeclimate.com/v1/badges/3525792e1feeccfd8875/maintainability)](https://codeclimate.com/github/flavorjones/calendar-assistant/maintainability)
 
 ## Usage
 
