update README with "config" and "availability"

--- a/README.md.erb
+++ b/README.md.erb
@@ -50,9 +50,29 @@ Also note that every command will adopt an intelligent default, which is general
 All tokens and preferences will be stored in `~/.calendar-assistant` which is in TOML format.
 
 
-### Commands
+## Commands
 
-#### Authorize access to your Google Calendar
+<pre>
+<%= run "help" %>
+</pre>
+
+
+### View your configuration parameters
+
+Calendar Assistant has intelligent defaults, which can be overridden in the TOML file `~/.calendar-assistant`, and further overridden via command-line parameters. Sometimes it's nice to be able to see what defaults Calendar Assistant is using:
+
+<pre>
+<%= run "help config" %>
+</pre>
+
+The output is TOML, which is suitable for dumping into `~/.calendar-assistant` and editing.
+
+<pre>
+<%= run "config" %>
+</pre>
+
+
+### Authorize access to your Google Calendar
 
 <pre>
 <%= run "help authorize" %>
@@ -63,7 +83,7 @@ This command will generate a URL which you should load in your browser while log
 Your access token will be stored in `~/.calendar-assistant` in the `[tokens]` section.
 
 
-#### Display your calendar events
+### Display your calendar events
 
 <pre>
 <%= run "help show" %>
@@ -82,7 +102,51 @@ Display _only_ the commitments I have to other people using the `-c` option:
 </pre>
 
 
-#### Tell people where you are at in the world
+### Join a video call attached to a meeting
+
+<pre>
+<%= run "help join" %>
+</pre>
+
+Some examples:
+
+<pre>
+<b>$</b> calendar-assistant join
+2018-09-28  11:30 - 12:00 | Status Meeting (recurring)
+https://pivotal.zoom.us/j/ABC90210
+# ... and opens the URL, which is associated with an event happening now
+
+<b>$</b> calendar-assistant join work --no-join 11:30
+2018-09-28  11:30 - 12:00 | Status Meeting (recurring)
+https://pivotal.zoom.us/j/ABC90210
+# ... and does not open the URL
+</pre>
+
+
+### Find your availability for meetings
+
+This is useful for emailing people your availability. It only considers `accepted` meetings when determining busy/free.
+
+<pre>
+<%= run "help availability" %>
+</pre>
+
+
+For example: show me my available time over a chunk of time:
+
+<pre>
+<%= run "avail 2018-10-02..2018-10-04" %>
+</pre>
+
+
+You can also set start and end times for the search, which is useful when looking for overlap with another time zone:
+
+<pre>
+<%= run "avail 2018-10-02..2018-10-04 -s 12pm -e 7pm" %>
+</pre>
+
+
+### Tell people where you are at in the world
 
 Declare your location as an all-day non-busy event:
 
@@ -116,7 +180,8 @@ Some examples:
 2018-09-10 - 2018-09-14   | <b>🗺  Vacation!</b> (not-busy, self)
 </pre>
 
-#### Look up where you're going to be
+
+### Look up where you're going to be
 
 <pre>
 <%= run "help location" %>
@@ -126,26 +191,6 @@ For example:
 
 <pre>
 <%= run "location \"2018-09-24...2018-09-28\"" %>
-</pre>
-
-#### Join a video call attached to a meeting
-
-<pre>
-<%= run "help join" %>
-</pre>
-
-Some examples:
-
-<pre>
-<b>$</b> calendar-assistant join
-2018-09-28  11:30 - 12:00 | Status Meeting (recurring)
-https://pivotal.zoom.us/j/ABC90210
-# ... and opens the URL, which is associated with an event happening now
-
-<b>$</b> calendar-assistant join work --no-join 11:30
-2018-09-28  11:30 - 12:00 | Status Meeting (recurring)
-https://pivotal.zoom.us/j/ABC90210
-# ... and does not open the URL
 </pre>
 
 
