--- a/README.md.erb
+++ b/README.md.erb
@@ -45,6 +45,11 @@ For a date range or a datetime range, split the start and end with `..` or `...`
 Also note that every command will adopt an intelligent default, which is generally "today" or "now".
 
 
+### Duration Specification
+
+Some duration-related preferences are interpreted by [ChronicDuration](https://github.com/henrypoydar/chronic_duration) and so can be terms like "10m", "30 minutes", "four hours", etc.
+
+
 ### Preferences
 
 All tokens and preferences will be stored in `~/.calendar-assistant` which is in TOML format.
