update README for credentials storage change

--- a/README.md.erb
+++ b/README.md.erb
@@ -32,11 +32,9 @@ A command-line tool to help me manage my Google Calendar.
 
 ## Usage
 
-Head to [the quickstart](https://developers.google.com/calendar/quickstart/ruby) to enable the Calendar API for your Google account and create a new "project". Save the project info in `credentials.json`.
+Head to [the quickstart](https://developers.google.com/calendar/quickstart/ruby) to enable the Calendar API for your Google account and create a new "project". Save the project info in `~/.calendar-assistant.client`.
 
 Then run `calendar-assistant authorize PROFILE_NAME` (see below for details).
-
-Once you're authorized, feel free to delete the `credentials.json` file. You can re-download that info again if you ever need it.
 
 
 ## Features
