update README with the Google Calendar API Reference
[skip ci]

--- a/README.md.erb
+++ b/README.md.erb
@@ -223,9 +223,9 @@ The output is TOML, which is suitable for dumping into `~/.calendar-assistant` a
 
 Google Calendar Concepts: https://developers.google.com/calendar/concepts/
 
-Google's API docs: https://www.rubydoc.info/github/google/google-api-ruby-client/Google/Apis/CalendarV3
+Google Calendar API Reference: https://developers.google.com/calendar/v3/reference/
 
-Recurrence: https://github.com/seejohnrun/ice_cube
+Google Calendar Ruby Client Docs: https://www.rubydoc.info/github/google/google-api-ruby-client/Google/Apis/CalendarV3
 
 
 ## License
