README: improve "join" section
[skip ci]

--- a/README.md.erb
+++ b/README.md.erb
@@ -103,14 +103,19 @@ Some examples:
 
 <pre>
 <b>$</b> calendar-assistant join
-2018-09-28  11:30 - 12:00 | Status Meeting (recurring)
-https://pivotal.zoom.us/j/ABC90210
-<i># ... and opens the URL, which is associated with an event happening now</i>
+<i>me@example.com</i>
+
+2018-10-01  11:30 - 12:00<b> | Facilitate customized web-readiness </b><i> (1:1, recurring)</i>
+
+https://pivotal.zoom.us/j/ABC90210 <i># ... and opens the videoconference URL</i>
+
 
 <b>$</b> calendar-assistant join work 11:30 --no-join 
-2018-09-28  11:30 - 12:00 | Status Meeting (recurring)
-https://pivotal.zoom.us/j/ABC90210
-<i># ... and does not open the URL</i>
+<i>me@example.com</i>
+
+2018-10-01  11:30 - 12:00<b> | Facilitate customized web-readiness </b><i> (1:1, recurring)</i>
+
+https://pivotal.zoom.us/j/ABC90210 <i># ... and does not open the URL</i>
 </pre>
 
 
