remove profile option from README

--- a/README.md.erb
+++ b/README.md.erb
@@ -199,7 +199,7 @@ For example:
 For example: display all events scheduled for tomorrow:
 
 <pre>
-<%= run "show --profile=work 2018-10-01" %>
+<%= run "show 2018-10-01" %>
 </pre>
 
 Display _only_ the commitments I have to other people using the `-c` option:
