Allow home directory to be overridden

--- a/README.md.erb
+++ b/README.md.erb
@@ -62,6 +62,7 @@ Some duration-related preferences are interpreted by [ChronicDuration](https://g
 
 All tokens and preferences will be stored in `~/.calendar-assistant` which is in TOML format for easy editing.
 
+The location of `.calendar-assistant` defaults to the user's home directory. This location may be overridden by setting the environment variable `CA_HOME`
 
 ## Setup
 
