Add happy path feature tests
- Feature tests are sloooow, and only run with the rake default task
- They are also excluded by default for .rspec

[Closes #65]

--- a/README.md.erb
+++ b/README.md.erb
@@ -237,8 +237,12 @@ The output is TOML, which is suitable for dumping into `~/.calendar-assistant` a
 gem install bundler
 bundle install
 
-rake spec
+rake spec     # Run all tests except feature tests
+rake features # Run only feature tests
+rake          # Default task runs both feature and non feature tests
 ```
+
+**Note:** Feature tests are excluded by default in [.rspec](.rspec)
 
 ### Generate README
 
