fleshed out the README "Development" section a bit
because people seem to be interested in working on it

[skip ci]

--- a/README.md.erb
+++ b/README.md.erb
@@ -229,9 +229,10 @@ The output is TOML, which is suitable for dumping into `~/.calendar-assistant` a
 <%= run "config" %>
 </pre>
 
+
 ## Development
 
-### Tests
+### Running Tests Locally
 
 ```bash
 gem install bundler
@@ -244,14 +245,26 @@ rake          # Default task runs both feature and non feature tests
 
 **Note:** Feature tests are excluded by default in [.rspec](.rspec)
 
+
+### Continuous Integration
+
+CI is running in a [Concourse](https://concourse-ci.org) pipeline at [https://ci.nokogiri.org](https://ci.nokogiri.org/teams/calendar-assistants/pipelines/calendar-assistant).
+
+
+### Code Quality
+
+We're running [Code Climate](https://codeclimate.com/github/flavorjones/calendar-assistant) to monitor code quality and test coverage.
+
+
 ### Generate README
 
-* Requires npm to be installed
-* Will use a fixture file rather than connecting to a remote calendar. Fixtures can be updated/regenerated in [generate-fixtures](generate-fixtures) script
+* Note that doing this requires npm to be installed
+* Generation will use a fixture file rather than connecting to a remote calendar. Fixtures can be updated/regenerated in [generate-fixtures](generate-fixtures) script
 
 ```bash
 ./generate-readme
 ```
+
 
 ## References
 
