make the README header more interesting

--- a/README.md.erb
+++ b/README.md.erb
@@ -17,9 +17,10 @@ def run args
   output.map {|line| obfuscate line }.join("\n")
 end
 %>
-# calendar assistant
+<img src="icons/calendar-assistant.png" align="right" />
 
-A command-line tool to help you manage your Google Calendar.
+# Calendar Assistant
+>A command-line tool to help you manage your Google Calendar.
 
 - easily join the videoconference for your current meeting
 - see yours and others' "availability" suitable for an email response
