--- a/README.md.erb
+++ b/README.md.erb
@@ -87,9 +87,24 @@ All tokens and preferences will be stored in `~/.calendar-assistant` which is in
 
 The location of `.calendar-assistant` defaults to the user's home directory. This location may be overridden by setting the environment variable `CA_HOME`
 
+
 #### Location Emoji
 
 There is a `[settings]` key called `location-icons` that may be set to an array denoting all emoji that indicate a location event. The first icon in the array will be used as the default. The default emoji included are `["🗺 ", "🌎"]` with the map icon first
+
+
+#### Command-Specific Preferences
+
+If there are user preferences you'd like to set for just a single command (e.g., making public location events created via `location-set`), you can create a nested section in your TOML settings file, like so:
+
+```toml
+[settings]
+visibility = default
+
+[settings.location_set]
+visibility = public
+```
+
 
 ## Setup
 
