--- a/README.md.erb
+++ b/README.md.erb
@@ -88,6 +88,13 @@ All tokens and preferences will be stored in `~/.calendar-assistant` which is in
 The location of `.calendar-assistant` defaults to the user's home directory. This location may be overridden by setting the environment variable `CA_HOME`
 
 
+#### Nickname
+
+Some commands, like `location-set`, will refer to you by nickname if you configure it (the alternative might be to not specify your name, or use your email id).
+
+Set `nickname` to a string that would uniquely and briefly identify you to others, like "Mike D" or "JK".
+
+
 #### Location Emoji
 
 There is a `[settings]` key called `location-icons` that may be set to an array denoting all emoji that indicate a location event. The first icon in the array will be used as the default. The default emoji included are `["🗺 ", "🌎"]` with the map icon first
