--- a/README.md.erb
+++ b/README.md.erb
@@ -101,7 +101,6 @@ Some commands, like `location-set`, will refer to you by nickname if you configu
 
 Set `nickname` to a string that would uniquely and briefly identify you to others, like "Mike D" or "JK".
 
-
 #### Location Emoji
 
 There is a `[settings]` key called `location-icon` that may be set to an emoji denoting a location event. By default CalendarAssistant will use `"🌎"`, but you can change this.
@@ -114,11 +113,16 @@ If there are user preferences you'd like to set for just a single command (e.g.,
 ```toml
 [settings]
 visibility = "default"
+nickname = "uniquely-me"
 
 [settings.location_set]
 visibility = "public"
+calendars = ["teamcalendar@group.calendar.google.com","teamcalendar2@group.calendar.google.com"]
 ```
 
+_This Example illustrates how one might create and manage location events on **multiple calendars**.
+Note that this option should probably only be used in conjunction with the `nickname` setting described above
+as its logic will modify calendar events and the nickname helps uniquely identify location records for a user_
 
 ## Setup
 
