CA has interactive shell to improve load times, experience
[closes #109]

--- a/README.md.erb
+++ b/README.md.erb
@@ -303,6 +303,18 @@ The output is TOML, which is suitable for dumping into `~/.calendar-assistant` a
 <%= run "config" %>
 </pre>
 
+### `interactive`: Interactive Console
+
+<pre>
+<%= run "help interactive" %>
+</pre>
+
+For example, check the version of calendar assistant
+
+```
+calendar-assistant> version
+0.0.0
+```
 
 ## Development
 
