remove remaining traces of Concourse

--- a/README.md.erb
+++ b/README.md.erb
@@ -335,7 +335,7 @@ bundle exec rake          # Default task runs both feature and non feature tests
 
 ### Continuous Integration
 
-[![Concourse CI](https://ci.nokogiri.org/api/v1/teams/calendar-assistants/pipelines/calendar-assistant/jobs/rake-spec/badge)](https://ci.nokogiri.org/teams/calendar-assistants/pipelines/calendar-assistant)
+CI is running in [Github Actions](https://github.com/flavorjones/calendar-assistant/actions/workflows/test-suite.yml).
 
 
 ### Code Quality
